syntax = "proto3";

// ✅ Use a simple, clean package name for ease of Python importing
package runtime;

// ✅ Import core and shared proto dependencies
import "google/protobuf/any.proto";
import "shared_messages.proto";  // This must exist in the proto path when compiling

// ✅ Service definition for model runtime
service RuntimeService {
  // Load a model instance into this runtime
  rpc LoadModel (shared.LoadModelRequest) returns (shared.LoadModelResponse);

  // Handle a simulation event
  rpc HandleEvent (shared.HandleEventRequest) returns (shared.HandleEventResponse);

  // Unload a model instance from memory
  rpc UnloadModel (shared.UnloadModelRequest) returns (shared.UnloadModelResponse);
}
